continue related work

--- a/Sources/Coherence/coherence_simple.tex
+++ b/Sources/Coherence/coherence_simple.tex
@@ -352,7 +352,7 @@ According to our definition, we also require that (3) $[[v1]]$ and $[[v2']]$ are
 related and (4) $[[v2]]$ and $[[v1']]$ are related. To see why this is the case, consider
 whether $(\pair{1}{2}, \pair{1}{2}) \in \valRR{[[nat & nat]]}$. If we regard
 $[[nat & nat]]$ as a normal product type, then these two pairs are related.
-However, as we mentioned, $\pair{1}{2}$ should not be considered as the image of
+However, as remarked earlier, $\pair{1}{2}$ should not be considered as the image of
 some source expression at the type $[[nat & nat]]$, and our definition correctly
 rejects it because $1$ is not equal to $2$, while accepting pairs such as
 $\pair{1}{1}, \pair{2}{2}$, etc.
