--- a/Sources/Poly/elaboration.tex
+++ b/Sources/Poly/elaboration.tex
@@ -217,7 +217,7 @@ they do not have distributivity rules.
 Finally we show the correctness of the algorithmic subtyping:
 
 \begin{conjecture}[Soundness]
-  If $[[ fs |- A <: B ~~> c]]$ then $ [[   A <: fs -> B ~~> c  ]]   $.
+  If $[[ fs |- A <: B ~~> c]]$ then $ [[   A <: fs => B ~~> c  ]]   $.
 \end{conjecture}
 
 \begin{conjecture}[Completeness]
