--- a/Sources/Poly/overview.tex
+++ b/Sources/Poly/overview.tex
@@ -1,5 +1,6 @@
 
 \section{Motivation}
+\label{sec:poly:motivation}
 
 Parametric polymorphism~\citep{reynolds1983types} is a well-beloved (and
 well-studied) programming feature. It enables a single piece of code to be
