--- a/Thesis.bib
+++ b/Thesis.bib
@@ -680,7 +680,7 @@ year		= {2007},
   title={The Cecil Language},
   author={Chambers, Craig},
   year={1993},
-  institution={Citeseer}
+  institution={University of Washington}
 }
 
 
@@ -1475,5 +1475,23 @@ booktitle = {Archiv. Math. Logik}
   title={Programming with intersection types and bounded polymorphism},
   author={Pierce, Benjamin C},
   year={1991},
-  school={Citeseer}
+  school={University of Pennsylvania}
+}
+
+@article{leijen2005extensible,
+  title={Extensible records with scoped labels.},
+  author={Leijen, Daan},
+  journal={Trends in Functional Programming},
+  volume={5},
+  pages={297--312},
+  year={2005}
+}
+
+@inproceedings{cardelli1989operations,
+  title={Operations on records},
+  author={Cardelli, Luca and Mitchell, John C},
+  booktitle={International Conference on Mathematical Foundations of Programming Semantics},
+  pages={22--52},
+  year={1989},
+  organization={Springer}
 }
