--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1495,3 +1495,38 @@ booktitle = {Archiv. Math. Logik}
   year={1989},
   organization={Springer}
 }
+
+@inproceedings{Crary_1999,
+	year = 1999,
+	publisher = {{ACM} Press},
+	author = {Karl Crary and Robert Harper and Sidd Puri},
+	title = {What is a recursive module?},
+	booktitle = {Proceedings of the {ACM} {SIGPLAN} 1999 conference on Programming language design and implementation  - {PLDI} {\textquotesingle}99}
+}
+
+@inproceedings{Russo_2001,
+	year = 2001,
+	publisher = {{ACM} Press},
+	author = {Claudio V. Russo},
+	title = {Recursive structures for standard {ML}},
+	booktitle = {Proceedings of the sixth {ACM} {SIGPLAN} international conference on Functional programming  - {ICFP} {\textquotesingle}01}
+}
+
+@article{ROSSBERG_2014,
+	year = 2014,
+	volume = {24},
+	number = {05},
+	pages = {529--607},
+	author = {Andreas Rossberg and Claudio Russo and Derek Dreyer},
+	title = {F-ing modules},
+	journal = {Journal of Functional Programming}
+}
+
+
+@inproceedings{Rossberg_2015,
+	year = 2015,
+	publisher = {{ACM} Press},
+	author = {Andreas Rossberg},
+	title = {1ML {\textendash} core and modules united (F-ing first-class modules)},
+	booktitle = {Proceedings of the 20th {ACM} {SIGPLAN} International Conference on Functional Programming - {ICFP} 2015}
+}
